Fix note word wrapping issue

--- a/src/Server.UI/wwwroot/css/app.css
+++ b/src/Server.UI/wwwroot/css/app.css
@@ -102,3 +102,8 @@
     margin: 0;
     flex: 1;
 }
+
+.word-wrap {    
+    word-wrap: break-word;
+    white-space: normal;
+}
